yaml/authoring-sdc-svc.yaml
apiVersion: 1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: auth-sdc
    labels:
      app: auth-sdc
  spec:
    type: NodePort
    ports:
    - name: http
      port: 18635
      targetPort: 18630
      protocol: TCP
    selector:
      app: auth-sdc
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: auth-sdc
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host:
      http:
        paths:
        - path: /
          backend:
            serviceName: auth-sdc
            servicePort: 18635
