yaml/sdc-ingress-svc-deployment.yaml
apiVersion: 1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: auth-sdc
    labels:
      app :auth-sdc
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: auth-sdc
    template:
      metadata:
        labels:
          app: auth-sdc
      spec:
        containers:
        - name : auth-sdc
          image: streamsets/datacollector:latest
          ports:
          - containerPort: 18630
- apiVersion: v1
  kind: Service
  metadata:
    name: auth-sdc
    labels:
      app: auth-sdc
  spec:
    type: NodePort
    ports:
    - name: http
      port: 18635
      targetPort: 18630
      protocol: TCP
    selector:
      app: auth-sdc
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: auth-sdc
    annotations:
      kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host:
      http:
        paths:
        - path: /
          backend:
            serviceName: auth-sdc
            servicePort: 18635
